# local-lore

./: AGENTS.md  Cargo.toml  README.md
db/migrations/definitions/: _initial.json
db/schemas/: dependency.surql
migrations/definitions/: _initial.json
schemas/: CreateDependency.surql  dependency.surql  project_dependency.surql
src/: context.rs  jobs.rs  main.rs  migrations.rs  models.rs  scan_directory.rs
src/collectors/: cargo_lock.rs  mod.rs  package_lock.rs
src/entities/: dependency.rs  mod.rs  project.rs  project_dependency.rs
src/migrator/: m20251021_create_dependency.rs  m20251021_create_project.rs  m20251022_create_dependency.rs  m20251022_create_project_dependency.rs  m20251023_create_project_dependency.rs  mod.rs
src/scan_directory/: cargo_lock.rs  mod.rs  package_lock.rs  rust.rs
