[package]
name = "local-lore"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "=1.0.100"
apalis = { version = "=0.7.3", features = ["catch-panic", "limit", "retry"] }
apalis-cron = "=0.7.3"
cargo_metadata = "=0.23.0"
chrono = { version = "=0.4.42", features = ["serde"] }
chrono-tz = "=0.10.4"
dirs = "=6.0.0"
fastrace = { version = "=0.7.14", features = ["enable"] }
futures = "=0.3.31"
include_dir = "=0.7.4"
log = "=0.4.28"
logforth = { version = "=0.28.1", features = [
  "append-fastrace",
  "starter-log",
] }
package-lock-json-parser = "=0.4.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
strum = { version = "=0.27.2", features = ["derive"] }
surrealdb = { version = "=2.3.10", features = ["kv-rocksdb"] }
surrealdb-migrations = "=2.3.0"
tokio = { version = "=1.48.0", features = ["full"] }
turbomcp = "=2.0.3"
